updated routes with appropriate roles authorization
